--- a/template/templates_folder/portfolio/index.html
+++ b/template/templates_folder/portfolio/index.html
@@ -107,57 +107,89 @@
         </div>
       </section>
 
-      <!-- <section class="portfolio-look">
+      <section class="portfolio-look">
         <div class="look-head">
           <h1>Let's Take A Look at My Portfolio</h1>
           <p>ication, and people skills. Able to thrive in fast-paced and</p>
           <p>and challenging environments where accuracy and</p>
         </div>
+        <div class="blue-div-wrap">
+          <div class="blue-div">
+            <div class="blue-div-items">
+              <div class="blue-details1">
+                <img
+                  class="check-img"
+                  src="./images/Rectangle_113.png"
+                  alt=""
+                />
+                <p class="first-p">Adura depicts ral arts</p>
+                <p class="first-p">in France, Greece, Tu</p>
+              </div>
 
-        <div class="blue-div">
-          <div class="blue-details1">
-            <img class="check-img" src="./images/Rectangle_113.png" alt="" />
-            <p class="first-p">Adura depicts ral arts</p>
-            <p class="first-p">in France, Greece, Tu</p>
-          </div>
+              <div class="blue-details2">
+                <img
+                  class="check-img"
+                  src="./images/Rectangle_112.png"
+                  alt=""
+                />
+                <p class="second-p">Adura depicts ral arts</p>
+                <p class="second-p">in France, Greece, Tu</p>
+              </div>
 
-          <div class="blue-details2">
-            <img class="check-img" src="./images/Rectangle_112.png" alt="" />
-            <p class="second-p">Adura depicts ral arts</p>
-            <p class="second-p">in France, Greece, Tu</p>
-          </div>
-
-          <div class="blue-details3">
-            <img class="check-img" src="./images/Rectangle_114.png" alt="" />
-            <p class="third-p">Adura depicts ral arts</p>
-            <p class="third-p">in France, Greece, Tu</p>
+              <div class="blue-details3">
+                <img
+                  class="check-img"
+                  src="./images/Rectangle_114.png"
+                  alt=""
+                />
+                <p class="third-p">Adura depicts ral arts</p>
+                <p class="third-p">in France, Greece, Tu</p>
+              </div>
+            </div>
           </div>
         </div>
 
-        <div class="blue-div">
-          <div class="blue-details4">
-            <img class="check-img" src="./images/Rectangle_117.png" alt="" />
-            <p class="first-p">Adura depicts ral arts</p>
-            <p class="first-p">in France, Greece, Tu</p>
-          </div>
+        <div class="blue-div-wrap2">
+          <div class="blue-div2">
+            <div class="blue-div-items2">
+              <div class="blue-details4">
+                <img
+                  class="check-img"
+                  src="./images/Rectangle_117.png"
+                  alt=""
+                />
+                <p class="first-p">Adura depicts ral arts</p>
+                <p class="first-p">in France, Greece, Tu</p>
+              </div>
 
-          <div class="blue-details5">
-            <img class="check-img" src="./images/Rectangle_116.png" alt="" />
-            <p class="second-p">Adura depicts ral arts</p>
-            <p class="second-p">in France, Greece, Tu</p>
+              <div class="blue-details5">
+                <img
+                  class="check-img"
+                  src="./images/Rectangle_116.png"
+                  alt=""
+                />
+                <p class="second-p">Adura depicts ral arts</p>
+                <p class="second-p">in France, Greece, Tu</p>
+              </div>
 
-            <button class="view-more">View More...</button>
-          </div>
-
-          <div class="blue-details6">
-            <img class="check-img" src="./images/Rectangle _18.png" alt="" />
-            <p class="third-p">Adura depicts ral arts</p>
-            <p class="third-p">in France, Greece, Tu</p>
+              <div class="blue-details6">
+                <img
+                  class="check-img"
+                  src="./images/Rectangle _18.png"
+                  alt=""
+                />
+                <p class="third-p">Adura depicts ral arts</p>
+                <p class="third-p">in France, Greece, Tu</p>
+              </div>
+            </div>
+            <div class="view-more-btn">
+              <button class="view-more">View More...</button>
+            </div>
           </div>
         </div>
       </section>
 
-      <div>
+      <!--<<div>
         <h1 class="best-brand">Working with the best brand</h1>
       </div>
 
