--- a/template/index.html
+++ b/template/index.html
@@ -48,8 +48,8 @@
             </div>
 
             <ul>
-                <li>Product<span><img src="./images/nav/downArrow.svg" alt="" /></span></li>
-                <li>Resource<span><img src="./images/nav/downArrow.svg" alt="" /></span></li>
+                <li>Product<span></li>
+                <li>Resource<span></li>
                 <li>Templates</li>
                 <li>Hire an expert</li>
             </ul>
