--- a/template/templates_folder/index.html
+++ b/template/templates_folder/index.html
@@ -19,9 +19,9 @@
                 <a href="#">Template</a>
                 <a href="#">Resource</a>
             </div>
-            <div class="mobile__menu">
+            <!-- <div class="mobile__menu">
                 <i class="bi bi-list"></i>
-            </div>
+            </div> -->
         </div>
     </header>
     <hr class="hr-1">
