--- a/cmsapp/templates/cmsapp/landingpage.html
+++ b/cmsapp/templates/cmsapp/landingpage.html
@@ -49,7 +49,7 @@
             </div>
 
             <ul>
-                <li><a href="{% url 'cmsapp:product_page' %}" style="color:#243653;">Product</a></li>
+<!--                 <li><a href="{% url 'cmsapp:product_page' %}" style="color:#243653;">Product</a></li> -->
                 <li><a href="{% url 'cmsapp:resource_page' %}" style="color:#243653;">Resource</a></li>
                 <li onclick="getStarted()">Templates</li>
                 <li> <a href="{% url 'cmsapp:hire_an_expert_page' %}" style="color:#243653;">Hire an expert</a></li>
