--- a/cmsapp/templates/cmsapp/landingpage.html
+++ b/cmsapp/templates/cmsapp/landingpage.html
@@ -49,10 +49,10 @@
             </div>
 
             <ul>
-                <li></li>
-                <li></li>
+                <li>Product</li>
+                <li>Resource</li>
                 <li onclick="getStarted()">Templates</li>
-                <li></li>
+                <li>Hire an expert</li>
             </ul>
 
             <div class="nav-btns">
