--- a/template/featuresPage/features.html
+++ b/template/featuresPage/features.html
@@ -18,8 +18,8 @@
             </div>
 
             <ul>
-                <li>Product<span><img src="../images/nav/downArrow.svg" alt="" /></span></li>
-                <li>Resource<span><img src="../images/nav/downArrow.svg" alt="" /></span></li>
+                <li>Product<span><!-- <img src="../images/nav/downArrow.svg" alt="" /> --></span></li>
+                <li>Resource<span><!-- <img src="../images/nav/downArrow.svg" alt="" />--></span></li> 
                 <li>Templates</li>
                 <li>Hire an expert</li>
             </ul>
