--- a/template/templates_folder/newportfolio/index.html
+++ b/template/templates_folder/newportfolio/index.html
@@ -10,7 +10,7 @@
 
  </head>
  <body>
-   <div class="underline"></div>
+   <!-- <div class="underline"></div> -->
     <!-- <header class="port-temp-header">
       <nav class="port-temp-navbar">
         <div class="port-temp-back">
@@ -33,7 +33,7 @@
     </header> -->
 
     <div class="portfolio-details">
-        <div class="underline"></div>
+        <!-- <div class="underline"></div> -->
         <div class="portfolio-img">
             <div class="img1"></div>
             <div class="img2">
@@ -130,7 +130,6 @@
 
             </div>
 
-
             <div class="blue-div">
                 <div class="blue-details4">
                     <img class="check-img" src="./images/Rectangle_117.png" alt="">
@@ -140,7 +139,7 @@
                     <p class="first-p">in France, Greece, Tu</p>
                 </div>
             
-                <div class="blue-details5">
+                <div class="blue-details5 ">
                     <img class="check-img" src="./images/Rectangle_116.png" alt="">
                     <p class="second-p">
                             Adura depicts ral arts
@@ -150,7 +149,7 @@
                        <button class="view-more"> View More...</button>
                 </div>
             
-                <div class="blue-details6">
+                <div class="blue-details6 ">
                     <img class="check-img" src="./images/Rectangle _18.png" alt="">
                     <p class="third-p">
                         Adura depicts ral arts
@@ -255,3 +254,10 @@
 
 </body>
 </html>
+
+
+
+
+
+
+
