--- a/static/templates_folder/templates.css
+++ b/static/templates_folder/templates.css
@@ -194,13 +194,46 @@ hr {
     cursor: pointer;
     opacity: .9;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25)) drop-shadow(0px 75px 50px rgba(74, 72, 72, 0.1));
-}
+    /* added ------------------------------------------- */
+    position: absolute;
+}   
 
 .template__item:hover {
     opacity: 1;
     transform: scale(1.05);
     transition: .3s ease-in-out;
 }
+
+/* hover on template images */
+.image__overlay{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100.9%;
+    height: 95%;
+    background-color: rgba(0,0,0,0.6);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s
+}
+.image__overlay:hover{ 
+    opacity: 1;
+}
+
+.image__description{
+    font-size: 2em;
+    /* margin-top: 0.25em; */
+}
+.tea{
+    color: white;
+}
+.tea:hover{
+    text-decoration: underline;
+}
+/*  End  */
 
 .templates__item-text {
     display: flex;
