--- a/template/blogPage/index.html
+++ b/template/blogPage/index.html
@@ -51,7 +51,7 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100" alt="Wild Landscape"/>
+          <img src="https://mdbcdn.b-cdn.net/img/new/slides/041.webp" class="d-block w-100 rock" alt="Wild Landscape"/>
           <div class="carousel-caption d-none d-md-block">
             <h5>First slide label</h5>
             <p>Some representative placeholder content for the first slide.</p>
