--- a/static/templates_folder/templates.css
+++ b/static/templates_folder/templates.css
@@ -209,15 +209,16 @@ hr {
     position: relative;
     top: 0;
     left: 0;
-    width: 100.9%;
-    height: 95%;
+    width: 100%;
+    height: 93%;
     background-color: rgba(0,0,0,0.6);
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     opacity: 0;
-    transition: opacity 0.25s
+    transition: opacity 0.25s;
+    border-radius: inherit;
 }
 .image__overlay:hover{ 
     opacity: 1;
