[Feature]: Frontend editor has been implemented

--- a/cmsapp/templates/cmsapp/templates.html
+++ b/cmsapp/templates/cmsapp/templates.html
@@ -115,10 +115,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="{% url 'cmsapp:jayn_page' %}">Preview Jayn</a>
+                                <a class="tea" href="{% static 'template_preview/Frame 804.jpg' %}">Preview Jayn</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Jayn</a>
+                                <a class="tea" href="{% url 'display_create' 'template__a' %}">Edit Jayn</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -133,10 +133,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="{% url 'cmsapp:clady_page' %}">Preview Clady</a>
+                                <a class="tea" href="{% static 'template_preview/Frame 442.jpg' %}">Preview Clady</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Clady</a>
+                                <a class="tea" href="{% url 'display_create' 'template__b' %}">Edit Clady</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -151,10 +151,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="{% url 'cmsapp:inyang_page' %}">Preview Inyang</a>
+                                <a class="tea" href="{% static 'template_preview/Resturant container.jpg' %}">Preview Inyang</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Inyang</a>
+                                <a class="tea" href="{% url 'display_create' 'template__c' %}">Edit Inyang</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -169,10 +169,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="#">Preview Glams</a>
+                                <a class="tea" href="{% static 'templates_folder/images/templates/glams.png' %}">Preview Glams</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Glams</a>
+                                <a class="tea" href="{% url 'display_create' 'template__d' %}">Edit Glams</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -187,10 +187,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="#">Preview Olive</a>
+                                <a class="tea" href="{% static 'template_preview/Frame 441.jpg' %}">Preview Olive</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Olive</a>
+                                <a class="tea" href="{% url 'display_create' 'template__e' %}">Edit Olive</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -205,10 +205,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="#">Preview Seren</a>
+                                <a class="tea" href="{% static 'template_preview/Frame 502.jpg' %}">Preview Seren</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Seren</a>
+                                <a class="tea" href="{% url 'display_create' 'template__f' %}">Edit Seren</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -223,10 +223,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="#">Preview Pams</a>
+                                <a class="tea" href="{% static 'template_preview/portfolio container.jpg' %}">Preview Pams</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Pams</a>
+                                <a class="tea" href="{% url 'display_create' 'template__g' %}">Edit Pams</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -241,10 +241,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="#">Preview Chad</a>
+                                <a class="tea" href="{% static 'template_preview/Frame 803.jpg' %}">Preview Chad</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Chad</a>
+                                <a class="tea" href="{% url 'display_create' 'template__h' %}">Edit Chad</a>
                             </p>
                         </div>
                         <!-- end -->
@@ -260,10 +260,10 @@
                         <!-- added something -->
                         <div class="image__overlay"> 
                             <div class="image__description">
-                                <a class="tea" href="#">Preview Pedro</a>
+                                <a class="tea" href="{% static 'template_preview/E-commerce (Hi-fidelity).jpg' %}">Preview Pedro</a>
                             </div>
                             <p class="image__description">
-                                <a class="tea" href="#">Edit Pedro</a>
+                                <a class="tea" href="{% url 'display_create' 'template__i' %}">Edit Pedro</a>
                             </p>
                         </div>
                         <!-- end -->
