--- a/websites/templates/website/back.html
+++ b/websites/templates/website/back.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>
 	{% block title %} 
 	{% endblock title %}
@@ -18,6 +19,8 @@
 	<script src="{% static 'js/grape.min.js' %}"></script>
 	<script src="{% static 'js/grapesjs-preset-webpage.min.js' %}"></script>
 	<script src="{% static 'js/g.js' %}"></script>
+	<script src="{% static 'js/jquery-3.6.0.js' %}"></script>
+  <script src="{% static 'js/jquery-ui.js' %}"></script>
 	<style type="text/css">
 		/* Let's highlight canvas boundaries */
 #gjs {
