--- a/websites/templates/website/create.html
+++ b/websites/templates/website/create.html
@@ -1,4 +1,4 @@
-{% extends 'back.html' %}
+{% extends 'website/back.html' %}
 {% block title %}WebBuildr | Create Template {% endblock title %}
 {% block content %}
 {% load static %}
@@ -13,13 +13,14 @@
 	body {
 		margin: 0;
 		padding: 0;
+		height: 100vh;
 	}
 	#gjs {
-		height: 300px;
+		height: 100vh;
 	}
 
 	html {
-		/* overflow: scroll; */
+		overflow: scroll;
 		/* overflow: hidden; */
 		-ms-overflow-style: None;
 		-scrollbar-width:  None;
@@ -35,7 +36,22 @@
 </style>
 <form method="post" accept-charset="utf-8">
 	{% csrf_token %}
-<div id="gjs"></div>
+<div id="gjs">
+	{% if tab == 'a' %}
+		{% include 'cmsapp/jayn.html' %}
+	{% elif tab == 'b'%}
+		{% include 'cmsapp/clady.html' %}
+	{% elif tab == 'c'%}
+		{% include 'cmsapp/inyang.html' %}
+	{% elif tab == 'd'%}
+	{% elif tab == 'e'%}
+	{% elif tab == 'f'%}
+	{% elif tab == 'g'%}
+	{% elif tab == 'h'%}
+	{% elif tab == 'i'%}
+	{% else %}
+	{% endif %}
+</div>
 </form>
 
 {% endblock %}
@@ -60,7 +76,8 @@
                              }
                 );
 		    fetch(request).then((resp)=>resp.json()).then((response)=>{
-		    	console.log(response)
+		    	console.log(response);
+		    	window.location('{% url "all websites" %}')
 		    }).catch((error)=>{
 		    	console.log(error)
 		    });
